Feat: main mission division add
main mission division and news division divided

--- a/day2/HTML/index.html
+++ b/day2/HTML/index.html
@@ -50,19 +50,24 @@
                     <li class="sitemap">
                         <a href="#" class="diffLang-item">SITEMAP</a>
                     </li>
-                    <div class="dropdown">
-                        <a href="#" class="dropdown-text">한국어</a>
-                        <div class="dropdown-content">
-                            <a href="#">English</a>
-                            <a href="#">중국어</a>
-                            <a href="#">일본어</a>
-                            <a href="#">중국어</a>
-                        </div>
-                    </div>
                 </ul>
+                <div class="dropdown">
+                    <a href="#" class="dropdown-text">한국어</a>
+                    <div class="dropdown-content">
+                        <a href="#">English</a>
+                        <a href="#">중국어</a>
+                        <a href="#">일본어</a>
+                        <a href="#">중국어</a>
+                    </div>
+                </div>
             </nav>
         </header>
-        <main class="main"></main>
+        <main class="main">
+            <div class="mission">
+                <h2 class="slogan">CLOSING THE DISTANCE</h2>
+                <a href="#" class="btn_mission">LINE's Mission</a>
+            </div>
+        </main>
         <article class="core"></article>
         <footer class="footer"></footer>
     </div>
