--- a/day2/HTML/index.html
+++ b/day2/HTML/index.html
@@ -67,8 +67,68 @@
                 <h2 class="slogan">CLOSING THE DISTANCE</h2>
                 <a href="#" class="btn_mission">LINE's Mission</a>
             </div>
+            <section class="news">
+                <h2 class="news-title">NEWS ROOM</h2>
+                <ul class="news-list">
+                    <li class="news-list-content">
+                        <a href="#">라인, 웰컴 키트 디자인 프로젝트로 iF 디자인 어워드 2019 수상</a><br>
+                        <a href="#" class="news-list-sub">2019.02.19 | ALL</a>
+                    </li>
+                    <li class="news-list-content">
+                        <a href="#">라인, 보안 역량 강화 위해 세계적 화이트해커로 구성된 '그레이 해쉬' 인수</a><br>
+                        <a href="#" class="news-list-sub">2018.12.11 | ALL</a>
+                    </li>
+                    <li class="news-list-content">
+                        <a href="#">라인, 글로벌 암호화폐 거래소 비트박스에 아이콘(ICX) 상장</a><br>
+                        <a href="#" class="news-list-sub">2019.02.19 | ALL</a>
+                    </li>
+                    <li class="news-list-content">
+                        <a href="#">라인, 글로벌 암호화폐 거래소 비트박스 모바일 앱 출시</a><br>
+                        <a href="#" class="news-list-sub">2019.02.19 | ALL</a>
+                    </li>
+                </ul>
+                <ul class="news-list">
+                    <li class="news-list-content">
+                        <a href="#">라인-한국정보과학회 블록체인 경진대회에서 링크체인기반 에너지...</a><br>
+                        <a href="#" class="news-list-sub">2018.12.26 | ALL</a>
+                    </li>
+                    <li class="news-list-content">
+                        <a href="#">라인, 유저 의견 반영한 쉽고 편리한 핀테크 서비스 제공 위해 설문조사...</a><br>
+                        <a href="#" class="news-list-sub">2018.12.05 | ALL</a>
+                    </li>
+                    <li class="news-list-content">
+                        <a href="#">라인, 글로벌 개발 기술 컨퍼런스 'LINE DEV DAY 2018' 개최</a><br>
+                        <a href="#" class="news-list-sub">2018.11.23 | ALL</a>
+                    </li>
+                    <li class="news-list-content">
+                        <a href="#">라인파이낸셜, KEB하나은행 인도네시아 신주인수계약 통해 인니 핀테크...</a><br>
+                        <a href="#" class="news-list-sub">2018.10.28 | ALL</a>
+                    </li>
+                </ul>
+            </section>
         </main>
-        <article class="core"></article>
+        <section class="core">
+            <h2 class="readable-hidden">코어 메뉴</h2>
+            <ul class="coreMenu">
+                <li class="coreMenu-content">
+                    <a href="#">비즈니스 제휴 문의</a><br>
+                    <a href="#" class="coreMenu-sub">LINE은 사용자들의 커뮤니케이션을 더욱 즐겁게 만들어줄 파트너 기업을 모집합니다.</a>
+                </li>
+                <li class="coreMenu-content">
+                    <a href="#">기술정보</a><br>
+                    <a href="#" class="coreMenu-sub">LINE의 개발자들은 다양한 서비스를 개발하며, 기술적 도전을 매일 경험하고 있습니다.</a>
+                </li>
+                <li class="coreMenu-content">
+                    <a href="#">채용공고</a><br>
+                    <a href="#" class="coreMenu-sub">전 세계 인재들과 함께 내 커리어를 level up 하고 싶다면 지금 LINE에 조인하세요!</a>
+                </li>
+                <li class="coreMenu-content">
+                    <a href="#">캐릭터 사업</a><br>
+                    <a href="#" class="coreMenu-sub">메신저 속 LINE FRIENDS의 다양한 제품들은 물론 특별한 경험도 선사합니다.</a>
+                </li>
+
+            </ul>
+        </section>
         <footer class="footer"></footer>
     </div>
 </body>
