Feat: footer added
footer completed

--- a/day2/HTML/index.html
+++ b/day2/HTML/index.html
@@ -129,7 +129,22 @@
 
             </ul>
         </section>
-        <footer class="footer"></footer>
+        <footer class="footer">
+            <h4 class="readable-hidden">policy</h4>
+            <span class="footer-name">LINE.Corporation</span>
+            <ul class="policyList">
+                <li class="policyContent">
+                    <a href="#">개인정보처리</a>
+                </li>
+                <li class="policyContent">
+                    <a href="#">LINE파트너</a>
+                </li>
+                <li class="policyContent">
+                    <a href="#">Contact</a>
+                </li>
+
+            </ul>
+        </footer>
     </div>
 </body>
 </html>
