--- a/day4/index.html
+++ b/day4/index.html
@@ -50,10 +50,10 @@
                         <a href="#" class="diffLang-item">SITEMAP</a>                
                 </span>
                 <!-- dropdown for foreign languages -->
-                <div class="dropdown">
-                    <input id="dropdown-text" type="checkbox" name="foreign language">
-                    <label for="dropdown-text">한국어</label>
-                    <ul class="dropdown-content">
+                <div class="dropdown-lang">
+                    <input id="foreign-text" type="checkbox" name="foreign language">
+                    <label for="foreign-text">한국어</label>
+                    <ul class="foreign-content">
                         <li><a href="#">English</a></li>
                         <li><a href="#">중국어</a></li>
                         <li><a href="#">일본어</a></li>
@@ -69,94 +69,88 @@
             </section>
             <section class="news">
                 <h2 class="news-title">NEWS ROOM</h2>
-                <ul class="news-list">
-                    <li class="news-list-content">
                         <a href="#">
-                        <h3 class="news-recent">라인, 웰컴 키트 디자인 프로젝트로 iF 디자인 어워드 2019 수상</h3>
-                        <p class="news-list-sub">news-list-sub">2019.02.19 | ALL</p>
+                            <h3 class="news-recent">라인, 웰컴 키트 디자인 프로젝트로 iF 디자인 어워드 2019 수상</h3>
+                            <p class="news-list-date">2019.02.19</p>  <p class="view-all">ALL</p>
                         </a>
-                    </li>
-                    <li class="news-list-content">
-                        <a href="#">
-                        <h3 class="news-recent">라인-한국정보과학회 블록체인 경진대회에서 링크체인기반 에너지...</h3>
-                        <p class="news-list-sub">2018.12.26 | ALL</p>
-                        </a>
-                    </li>
-                    <li class="news-list-content">
-                        <a href="#">
-                        <h3 class="news-recent">라인-한국정보과학회 블록체인 경진대회에서 링크체인기반 에너지...</h3>
-                        <p class="news-list-sub">2018.12.26 | ALL</p>
-                        </a>
-                    </li>
-                    <li class="news-list-content">
-                        <a href="#">
-                        <h3 class="news-recent">라인-한국정보과학회 블록체인 경진대회에서 링크체인기반 에너지...</h3>
-                        <p class="news-list-sub">2018.12.26 | ALL</p>
-                        </a>
-                    </li>
-                    <li class="news-list-content">
-                        <a href="#">
-                        <h3 class="news-recent">라인-한국정보과학회 블록체인 경진대회에서 링크체인기반 에너지...</h3>
-                        <p class="news-list-sub">2018.12.26 | ALL</p>
-                        </a>
-                    </li>
-                    <li class="news-list-content">
                         <a href="#">
                             <h3 class="news-recent">라인-한국정보과학회 블록체인 경진대회에서 링크체인기반 에너지...</h3>
-                            <p class="news-list-sub">2018.12.26 | ALL</p>
+                            <p class="news-list-date">2018.12.26</p>  <p class="view-all">ALL</p>
                         </a>
-                    </li>
-                    <li class="news-list-content">
                         <a href="#">
                             <h3 class="news-recent">라인-한국정보과학회 블록체인 경진대회에서 링크체인기반 에너지...</h3>
-                            <p class="news-list-sub">2018.12.26 | ALL</p>
+                            <p class="news-list-date">2018.12.26</p>  <p class="view-all">ALL</p>
                         </a>
-                    </li>
-                    <li class="news-list-content">
                         <a href="#">
                             <h3 class="news-recent">라인-한국정보과학회 블록체인 경진대회에서 링크체인기반 에너지...</h3>
-                            <p class="news-list-sub">2018.12.26 | ALL</p>
+                            <p class="news-list-date">2018.12.26</p>  <p class="view-all">ALL</p>
                         </a>
-                    </li>
-                </ul>
-                <a href="#"><h3 class="news-list-more">more</h3></a>
+                        <a href="#">
+                            <h3 class="news-recent">라인-한국정보과학회 블록체인 경진대회에서 링크체인기반 에너지...</h3>
+                            <p class="news-list-date">2018.12.26</p> <p class="view-all"> ALL</p>
+                        </a>
+                        <a href="#">
+                            <h3 class="news-recent">라인-한국정보과학회 블록체인 경진대회에서 링크체인기반 에너지...</h3>
+                            <p class="news-list-date">2018.12.26</p>  <p class="view-all">ALL</p>
+                        </a>
+                        <a href="#">
+                            <h3 class="news-recent">라인-한국정보과학회 블록체인 경진대회에서 링크체인기반 에너지...</h3>
+                            <p class="news-list-date">2018.12.26</p>  <p class="view-all">ALL</p>
+                        </a>
+                        <a href="#">
+                            <h3 class="news-recent">라인-한국정보과학회 블록체인 경진대회에서 링크체인기반 에너지...</h3>
+                            <p class="news-list-date">2018.12.26</p>  <p class="view-all">ALL</p>
+                        </a>
+                    <a href="#"><h3 class="news-list-more">more</h3></a>
             </section>
         </main>
         <section class="core">
             <h2 class="readable-hidden">코어 메뉴</h2>
             <ul class="coreMenu">
                 <li class="coreMenu-content">
-                    <a href="#">비즈니스 제휴 문의</a><br>
-                    <a href="#" class="coreMenu-sub">LINE은 사용자들의 커뮤니케이션을 더욱 즐겁게 만들어줄 파트너 기업을 모집합니다.</a>
+                    <a href="#"><h3 class="coreMenu-title">비즈니스 제휴 문의</h3>
+                    <p class="coreMenu-sub">LINE은 사용자들의 커뮤니케이션을 더욱 즐겁게 만들어줄 파트너 기업을 모집합니다.</p></a>
                 </li>
                 <li class="coreMenu-content">
-                    <a href="#">기술정보</a><br>
-                    <a href="#" class="coreMenu-sub">LINE의 개발자들은 다양한 서비스를 개발하며, 기술적 도전을 매일 경험하고 있습니다.</a>
+                    <a href="#"><h3 class="coreMenu-title">기술정보</h3>
+                    <p class="coreMenu-sub">LINE의 개발자들은 다양한 서비스를 개발하며, 기술적 도전을 매일 경험하고 있습니다.</p></a>
                 </li>
                 <li class="coreMenu-content">
-                    <a href="#">채용공고</a><br>
-                    <a href="#" class="coreMenu-sub">전 세계 인재들과 함께 내 커리어를 level up 하고 싶다면 지금 LINE에 조인하세요!</a>
+                    <a href="#"><h3 class="coreMenu-title">채용공고</h3>
+                    <p class="coreMenu-sub">전 세계 인재들과 함께 내 커리어를 level up 하고 싶다면 지금 LINE에 조인하세요!</p></a>
                 </li>
                 <li class="coreMenu-content">
-                    <a href="#">캐릭터 사업</a><br>
-                    <a href="#" class="coreMenu-sub">메신저 속 LINE FRIENDS의 다양한 제품들은 물론 특별한 경험도 선사합니다.</a>
+                    <a href="#"><h3 class="coreMenu-title">캐릭터 사업</h3>
+                    <p class="coreMenu-sub">메신저 속 LINE FRIENDS의 다양한 제품들은 물론 특별한 경험도 선사합니다.</p></a>
                 </li>
             </ul>
         </section>
         <footer class="footer">
-            <h4 class="readable-hidden">policy</h4>
-            <span class="footer-name">LINE.Corporation</span>
-            <ul class="policyList">
-                <li class="policyContent">
-                    <a href="#">개인정보처리</a>
-                </li>
-                <li class="policyContent">
-                    <a href="#">LINE파트너</a>
-                </li>
-                <li class="policyContent">
-                    <a href="#">Contact</a>
-                </li>         
-            </ul>
+            <section class="info">
+                <h2 class="readable-hidden">policy</h2>
+                <span class="footer-name">LINE.Corporation</span>
+                <ul class="policyList">
+                    <li class="policyContent">
+                        <a href="#">개인정보처리</a>
+                    </li>
+                    <li class="policyContent">
+                        <a href="#">LINE파트너</a>
+                    </li>
+                    <li class="policyContent">
+                        <a href="#">Contact</a>
+                    </li>         
+                </ul>
+            </section>
+            <div class="dropdown-family">
+                <input id="family-text" type="checkbox" name="family sites">
+                <label for="family-text">한국어</label>
+                <ul class="family-content">
+                    <li><a href="#">English</a></li>
+                    <li><a href="#">중국어</a></li>
+                    <li><a href="#">일본어</a></li>
+                    <li><a href="#">한국어</a></li>
+                </ul>
+            </div>
         </footer>
     </div>
 </body>
