Feat: background video add
background video added
still working on it

--- a/day4/index.html
+++ b/day4/index.html
@@ -72,6 +72,9 @@
             <section class="mission">
                 <h2><a href="#" class="btn_mission">LINE's Mission</a></h2>
                 <p class="slogan">CLOSING THE DISTANCE</p>
+                <div class="line-video">
+                <iframe class="line-video-content" allowfullscreen="1"  allow="autoplay" title="line mission video" src="https://www.youtube.com/embed/JPpiKm8dKR8?controls=0&showinfo=0&modestbranding=1&wmode=transparent&enablejsapi=1&origin=https%3A%2F%2Flinepluscorp.com&widgetid=1" frameborder="0"></iframe>
+                </div>
             </section>
             <section class="news">
             <section class="news">
